data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1261.wast
;; 2. **Conditional Branch to Loop with Imported Function**:    - **Description**: A WebAssembly module (A) contains a `br_if` instruction within a loop that conditionally calls an imported function from module B. Verify correct stack unwinding and type consistency upon returning from the imported function based on the branch condition.    - **Constraint**: Ensure conditional branch correctly targets the loop and the imported function manages stack transitions accurately.

(assert_invalid
  (module
    (import "js" "external_func" (func $external_func (result i32)))
    (func $test_loop (result i32)
      (loop (result i32)
        (i32.const 1)
        (br_if 0
          (call $external_func)
        )
      )
    )
  )
  "type mismatch"
)